--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="container">
             <p style="margin-bottom: 0.5rem;">
                 <a href="/privacy" style="color: white; text-decoration: none;">プライバシーポリシー</a> | 
-                © 2025 三浦 海の学校 | 自動デプロイテスト完了 ✅
+                © 2025 三浦 海の学校
             </p>
         </div>
     </footer>
