fix: CSSキャッシュバスティング追加 - 水中テーマ強制更新

--- a/license/index.html
+++ b/license/index.html
@@ -23,8 +23,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/home-test.css">
-    <link rel="stylesheet" href="/assets/css/license.css">
+    <link rel="stylesheet" href="/assets/css/home-test.css?v=underwater2025">
+    <link rel="stylesheet" href="/assets/css/license.css?v=underwater2025">
 </head>
 <body>
     <!-- Underwater Bubbles Effect -->
